# compute-forecast-framework

./: .env.backup  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DASHBOARD_PROGRESS.md  FINDINGS.md  ISSUE_LABELING_GUIDELINES.md  LICENSE  MANIFEST.in  SEMANTIC_SCHOLAR_DEBUG_REPORT.md  STRATEGIC_VENUE_COLLECTION_SUMMARY.md  WORKER7_HANDOFF.md  all_domains_actual_fix.json  all_domains_completely_fixed.json  all_domains_final_fix.json  all_domains_fixed.json  all_domains_full.json  analyze_mila_papers.py  analyze_paperoni_dataset.py  build_package.sh  collection_realtime_final.py  complete_corrected_venue_list.json  complete_merged_venue_list.json  corrected_venue_mergers.json  correction_factors.json  create_final_temporal_analysis.py  create_fixed_multi_label_temporal_analysis.py  create_multi_label_temporal_analysis.py  create_proof_of_concept.py  create_research_domains_focus_fixed.py  critical_agreement_analysis.json  dataset_based_corrections_results.json  dataset_domain_comparison.json  detailed_rl_subdomain_analysis.py  domain_clusters.json  domain_extraction_raw.json  empirical_correction_analysis.json  final_corrected_domain_stats.json  fix_test_imports.py  (+28 more)
package/: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DASHBOARD_PROGRESS.md  GOOGLE_SCHOLAR_DEBUG_SUMMARY.md  GROBID_SETUP.md  MANIFEST.in  README.md  STRATEGIC_VENUE_COLLECTION_SUMMARY.md  VENUE_SCRAPER_CONSOLIDATION_ANALYSIS.md  acquire_benchmark_pdfs.py  all_domains_actual_fix.json  all_domains_final_fix.json  all_domains_full.json  analyze_corpus.py  analyze_datasets.py  analyze_duplicates.py  analyze_overlap.py  build_package.sh  check_recent_paper_query.py  cleanup_scripts.py  cluster_domains.py  collection_realtime_final.py  collection_validation_report.py  complete_paper_accounting.py  continue_collection_with_dashboard.py  correct_venue_mergers.py  corrected_venue_mergers.json  create_multi_label_temporal_analysis.py  create_proof_of_concept.py  create_research_domains_focus_fixed.py  critical_agreement_analysis.json  dataset_based_corrections.py  dataset_based_corrections_results.json  debug_collection.py  debug_dashboard.py  debug_temporal_classification.py  demo_complete_monitoring.py  demo_dashboard.py  (+74 more)
package/.claude/: uvpython.md
package/.github/workflows/: ci.yml  dependencies.yml
package/archive/: calculate_corrections.py  collection_fixed_display.py  collection_with_dashboard.py  collection_with_progress.py  continue_collection.py  create_collection_validation.py  detailed_agreement_analysis.py  execute_fixed_collection.py  execute_paper_collection.py  extract_domains.py  fix_venue_statistics.py  list_merged_venues.py  realtime_collection.py  temporal_analysis_fixed.py  validate_venue_statistics.py  venue_publication_counter.py
package/compute_forecast/: __init__.py  cli.py
package/compute_forecast/analysis/: base.py
package/compute_forecast/cli/: main.py
package/compute_forecast/core/: config.py
package/compute_forecast/filtering/: authorship_classifier.py
package/compute_forecast/monitoring/: advanced_dashboard_server.py  alert_structures.py  alert_suppression.py  alert_system.py  metrics_collector.py
package/compute_forecast/orchestration/: __init__.py  component_validator.py  workflow_coordinator.py
package/compute_forecast/pdf_discovery/: __init__.py
package/compute_forecast/pdf_download/: downloader.py
package/compute_forecast/pdf_storage/: __init__.py  discovery_integration.py  google_drive_store.py  pdf_manager.py
package/compute_forecast/quality/: adaptive_thresholds.py
package/config/: keywords.yaml  settings.yaml
package/data/: benchmark_baselines.json  benchmark_computational_requirements.csv  benchmark_extraction_summary.json  collection_validation_report.json  comprehensive_pdf_search_results.json  domain_progress_0.json  high_impact_authors.json  high_impact_pdf_search_results.json  manual_venue_corrections.json  mila_computational_requirements.csv  mila_computational_requirements.json  mila_selected_papers.json  mila_venue_statistics.json  pdf_availability_test.json  progress_0_2020.json  progress_0_2022.json  progress_0_2024.json  simple_collected_papers.json  simple_collection_stats.json  strategic_venue_collection.json  successful_pdf_downloads.json  top_merged_venues.json
package/data/states/: README.md
package/debug_plans/: worker2_google_scholar_debug.md  worker3_semantic_scholar_debug.md
package/docs/: claude_vision_setup.md  google_cloud_setup.md
package/examples/: README_ijcai_scraper.md  README_neurips_example.md  README_paper_collection.md  collect_neurips_papers.py  computational_filtering_usage.py  example_neurips_pipeline.py  quality_system_demo.py  scrape_acl_papers.py  scrape_ijcai_papers.py  unified_collection_example.py  venue_pipeline_example.py
package/journals/: issue_44_organization_classification.md
package/neurips_2024_test_cache/: neurips_2024_test_results_20250703_031116.json  neurips_2024_test_results_20250703_031207.json
package/scripts/: analyze_mila_papers_detailed.py  detailed_venue_analysis.py  extract_mila_computational_requirements.py  find_openalex_venue_ids.py  investigate_venue_scrapers.py  migrate_pdfs_to_drive.py  select_mila_papers.py  setup_google_drive.py  test_openalex_coverage.py  update_scraper_issues.sh
package/src/: __init__.py  test_google_scholar_init.py
package/src/analysis/: __init__.py
package/src/core/: exceptions.py  logging.py
package/src/data/: __init__.py  models.py
package/src/extraction/: __init__.py  coverage_reporter.py  default_templates.py  normalization_engine.py  (+3 more)
package/status/: worker0-overall.json  worker1-citation-collector.json  worker1-google-scholar.json  worker1-semantic-scholar.json  worker2-classification.json  worker2-organizations.json  worker2-parsing.json  worker4-analyzer.json  worker4-filtering.json  worker4-keywords.json  worker5-citation-validation.json  worker5-overall.json  worker5-reporting.json  worker6-production-ready.json  worker6-setup.json  worker6-validation.json
package/tests/: test_package_configuration.py
(+1627 files in other folders)
