[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "compute-forecast"
version = "0.1.0"
description = "A comprehensive tool for analyzing and forecasting computational requirements in machine learning research"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Compute Forecast Team", email = "compute-forecast@example.com"}
]
keywords = ["machine learning", "computational analysis", "research", "forecasting", "pdf parsing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "rich>=13.9.4",
    "scholarly>=1.7.11",
    "scikit-learn>=1.7.0",
    "selenium>=4.32.0",
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "eventlet>=0.36.1",
    "psutil>=5.9.0",
    "pandas>=2.0.0",
    "rapidfuzz>=3.13.0",
    "openreview-py>=1.50.1",
    "beautifulsoup4>=4.13.4",
    "semanticscholar>=0.10.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.20.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
]

[project.urls]
"Homepage" = "https://github.com/compute-forecast/compute-forecast"
"Bug Tracker" = "https://github.com/compute-forecast/compute-forecast/issues"
"Documentation" = "https://compute-forecast.readthedocs.io"

[project.scripts]
compute-forecast = "compute_forecast.cli:main"

[tool.setuptools]
packages = ["compute_forecast"]

[tool.setuptools.package-data]
compute_forecast = ["**/*.yaml", "**/*.yml", "**/*.json", "**/*.txt"]

[dependency-groups]
dev = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.1",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pre-commit>=4.2.0",
    "types-python-dateutil>=2.9.0",
    "types-pyyaml>=6.0.0",
    "types-requests>=2.32.0",
]
test = [
    "pytest-benchmark>=5.1.0",
    "pytest-profiling>=1.8.1",
    "pytest-timeout>=2.4.0",
]
types = [
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-cachetools>=5.6.0",
    "types-flask>=1.1.6",
    "types-psutil>=7.0.0.20250601",
    "types-setuptools>=80.9.0.20250529",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
