[project]
name = "package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "rich>=13.9.4",
    "scholarly>=1.7.11",
    "scikit-learn>=1.7.0",
    "selenium>=4.32.0",
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "eventlet>=0.36.1",
    "psutil>=5.9.0",
    "pandas>=2.0.0",
    "rapidfuzz>=3.13.0",
    "openreview-py>=1.50.1",
    "beautifulsoup4>=4.13.4",
    "semanticscholar>=0.10.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.20.0",
    "python-dotenv>=1.0.0",
    "google-cloud-vision>=3.10.2",
    "opencv-python>=4.11.0.86",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
    "ruff>=0.12.1",
]
test = [
    "pytest>=8.4.1",
]
